This is the Change Log for PHPlot.
The project home page is http://sourceforge.net/projects/phplot/
-----------------------------------------------------------------------------

2010-11-11
    * Moved information about plot types into a new static member array
      plots[]. (This is an internal change with no impact on usage, but will
      make it easier to add new plot types.) SetPlotType() no longer needs a
      list of plot types to check, FindDataLimits() does not need to check for
      specific plot types to to process the data array, and DrawGraph() uses
      data from the array rather than knowing about all the plot types.

2010-10-31
    * Changed internal CalcBarWidths() to take two arguments which indicate
      how it should calculate bar widths, rather than having it check the
      plot_type directly. (Taken from another, experimental change. This
      minimizes places where plot_type is directly used.)

2010-10-03 (lbayuk)     ===== Released as 5.2.0 =====
    * phplot.php: Updated version
    * README.txt: Updated for new release
    * NEWS.txt: Add text for new release
    * Makefile: Removed HorizontalBars.txt from release. This is now all
          documented in the reference manual.

2010-10-01
    * Rewrite color handling. Default and specified colors are now validated,
      converted to RGBA arrays, and saved. The colors indexes are not
      allocated until graph drawing time. Unneeded colors are not allocated.

      Fix bug 3045131 "SetTransparentColor problems": Transparency setup is
      deferred to graph drawing time, after most other colors are allocated.
      Fixes SetTransparentColor order dependency, and works with data colors.

      Fix bug 3049726 "Optimize color allocation": Colors allocation is
      deferred to graph drawing time, and colors for most elements are only
      allocated if needed. In particular, the data colors and dark colors,
      which used 32 slots, now only get defined as needed.
